Fix error prone warning in CoordinatorLayout.
Fixes:
CoordinatorLayout.java:630: warning: [ClassNewInstance] Class.newInstance()
bypasses exception checking; prefer getDeclaredConstructor().newInstance()

Test: ./gradlew support-design:assembleErrorProne
Change-Id: I16b3b10494b0f765cad078a782ecdf40631b9201
PiperOrigin-RevId: 176576551