@@ -626,7 +626,7 @@ public class CoordinatorLayout extends ViewGroup implements NestedScrollingParen
       }
       if (defaultBehavior != null) {
         try {
-          result.setBehavior(defaultBehavior.value().newInstance());
+          result.setBehavior(defaultBehavior.value().getDeclaredConstructor().newInstance());
         } catch (Exception e) {
           Log.e(
               TAG,
